projects/kotlin-util/1.2/docs/it.czerwinski.kotlin.util/-some/index.md
---
title: Some - Kotlin utilities
---

[Kotlin utilities](../../index.html) / [it.czerwinski.kotlin.util](../index.html) / [Some](./index.html)

# Some

`data class Some<T> : `[`Option`](../-option/index.html)`<`[`T`](index.html#T)`>`

Representation of a value of type [T](index.html#T).

### Parameters

`T` - Type of the value.

### Constructors

| [&lt;init&gt;](-init-.html) | `Some(value: `[`T`](index.html#T)`)`<br>Representation of a value of type [T](index.html#T). |

### Properties

| [isEmpty](is-empty.html) | `val isEmpty: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns `true` if the option is [None](../-none/index.html). Otherwise returns `false`. |
| [iterator](iterator.html) | `val ~~iterator~~: `[`Iterator`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterator/index.html)`<`[`T`](index.html#T)`>`<br>Returns a singleton iterator returning the option's value if it is defined, or an empty iterator if the option is empty. |
| [value](value.html) | `val value: `[`T`](index.html#T) |

### Inherited Properties

| [isDefined](../-option/is-defined.html) | `val isDefined: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns `true` if the option is [Some](./index.html). Otherwise returns `false`. |
| [isNotEmpty](../-option/is-not-empty.html) | `val isNotEmpty: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns `true` if the option is [Some](./index.html). Otherwise returns `false`. |

### Functions

| [asIterable](as-iterable.html) | `fun asIterable(): `[`Iterable`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterable/index.html)`<`[`T`](index.html#T)`>`<br>Returns an iterable that wraps this [Option](../-option/index.html) returning its value if it is defined, or an empty iterable if the option is empty. |
| [asSequence](as-sequence.html) | `fun asSequence(): `[`Sequence`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.sequences/-sequence/index.html)`<`[`T`](index.html#T)`>`<br>Returns a sequence that wraps this [Option](../-option/index.html) returning its value if it is defined, or an empty sequence if the option is empty. |
| [get](get.html) | `fun get(): `[`T`](index.html#T)<br>Gets the value of a [Some](./index.html) or throws an exception. |
| [getOrNull](get-or-null.html) | `fun getOrNull(): `[`T`](index.html#T)`?`<br>Gets the value of a [Some](./index.html) or `null` if this is a [None](../-none/index.html). |
| [iterator](iterator.html) | `fun iterator(): `[`Iterator`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-iterator/index.html)`<`[`T`](index.html#T)`>`<br>Returns a singleton iterator returning the option's value if it is defined, or an empty iterator if the option is empty. |
| [toList](to-list.html) | `fun toList(): `[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](index.html#T)`>`<br>Returns a singleton list containing the option's value if it is defined, or an empty list if the option is empty. |

### Inherited Functions

| [all](../-option/all.html) | `fun all(predicate: (`[`T`](../-option/index.html#T)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns the result of applying the [predicate](../-option/all.html#it.czerwinski.kotlin.util.Option$all(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Boolean)))/predicate) to the value if this is [Some](./index.html) or `true` if this is [None](../-none/index.html). |
| [any](../-option/any.html) | `fun any(predicate: (`[`T`](../-option/index.html#T)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns the result of applying the [predicate](../-option/any.html#it.czerwinski.kotlin.util.Option$any(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Boolean)))/predicate) to the value if this is [Some](./index.html) or `false` if this is [None](../-none/index.html). |
| [filter](../-option/filter.html) | `fun filter(predicate: (`[`T`](../-option/index.html#T)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Option`](../-option/index.html)`<`[`T`](../-option/index.html#T)`>`<br>Returns the same [Some](./index.html) if the [predicate](../-option/filter.html#it.czerwinski.kotlin.util.Option$filter(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Boolean)))/predicate) is satisfied for the value. Otherwise returns a [None](../-none/index.html). |
| [filterIsInstance](../-option/filter-is-instance.html) | `fun <R> filterIsInstance(): `[`Option`](../-option/index.html)`<`[`R`](../-option/filter-is-instance.html#R)`>`<br>Returns the same [Some](./index.html) casted to type [R](../-option/filter-is-instance.html#R) if it is [R](../-option/filter-is-instance.html#R). Otherwise returns a [None](../-none/index.html). |
| [filterNot](../-option/filter-not.html) | `fun filterNot(predicate: (`[`T`](../-option/index.html#T)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Option`](../-option/index.html)`<`[`T`](../-option/index.html#T)`>`<br>Returns the same [Some](./index.html) if the [predicate](../-option/filter-not.html#it.czerwinski.kotlin.util.Option$filterNot(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Boolean)))/predicate) is not satisfied for the value. Otherwise returns a [None](../-none/index.html). |
| [flatMap](../-option/flat-map.html) | `fun <R> flatMap(transform: (`[`T`](../-option/index.html#T)`) -> `[`Option`](../-option/index.html)`<`[`R`](../-option/flat-map.html#R)`>): `[`Option`](../-option/index.html)`<`[`R`](../-option/flat-map.html#R)`>`<br>Maps value of a [Some](./index.html) to a new [Option](../-option/index.html) using [transform](../-option/flat-map.html#it.czerwinski.kotlin.util.Option$flatMap(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.Option.flatMap.R)))))/transform) or returns the same [None](../-none/index.html). |
| [fold](../-option/fold.html) | `fun <R> fold(default: `[`R`](../-option/fold.html#R)`, transform: (`[`T`](../-option/index.html#T)`) -> `[`R`](../-option/fold.html#R)`): `[`R`](../-option/fold.html#R)<br>`fun <R> fold(default: () -> `[`R`](../-option/fold.html#R)`, transform: (`[`T`](../-option/index.html#T)`) -> `[`R`](../-option/fold.html#R)`): `[`R`](../-option/fold.html#R)<br>Returns result of applying [transform](../-option/fold.html#it.czerwinski.kotlin.util.Option$fold(it.czerwinski.kotlin.util.Option.fold.R, kotlin.Function1((it.czerwinski.kotlin.util.Option.T, it.czerwinski.kotlin.util.Option.fold.R)))/transform) on the value of [Some](./index.html) or [default](../-option/fold.html#it.czerwinski.kotlin.util.Option$fold(it.czerwinski.kotlin.util.Option.fold.R, kotlin.Function1((it.czerwinski.kotlin.util.Option.T, it.czerwinski.kotlin.util.Option.fold.R)))/default) if this is [None](../-none/index.html). |
| [forEach](../-option/for-each.html) | `fun forEach(action: (`[`T`](../-option/index.html#T)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Runs [action](../-option/for-each.html#it.czerwinski.kotlin.util.Option$forEach(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Unit)))/action) if this is a [Some](./index.html). Returns [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) without any action if this is [None](../-none/index.html). |
| [map](../-option/map.html) | `fun <R> map(transform: (`[`T`](../-option/index.html#T)`) -> `[`R`](../-option/map.html#R)`): `[`Option`](../-option/index.html)`<`[`R`](../-option/map.html#R)`>`<br>Maps value of a [Some](./index.html) using [transform](../-option/map.html#it.czerwinski.kotlin.util.Option$map(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, it.czerwinski.kotlin.util.Option.map.R)))/transform) or returns the same [None](../-none/index.html). |
| [none](../-option/none.html) | `fun none(predicate: (`[`T`](../-option/index.html#T)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns `false` if the [predicate](../-option/none.html#it.czerwinski.kotlin.util.Option$none(kotlin.Function1((it.czerwinski.kotlin.util.Option.T, kotlin.Boolean)))/predicate) is met by the value if this is [Some](./index.html) or `true` otherwise. |
| [toLeft](../-option/to-left.html) | `fun <R> toLeft(right: () -> `[`R`](../-option/to-left.html#R)`): `[`Either`](../-either/index.html)`<`[`T`](../-option/index.html#T)`, `[`R`](../-option/to-left.html#R)`>`<br>Returns a [Right](../-right/index.html) containing the given argument [right](../-option/to-left.html#it.czerwinski.kotlin.util.Option$toLeft(kotlin.Function0((it.czerwinski.kotlin.util.Option.toLeft.R)))/right) if this is empty, or a [Left](../-left/index.html) containing this option's value if it is defined. |
| [toRight](../-option/to-right.html) | `fun <L> toRight(left: () -> `[`L`](../-option/to-right.html#L)`): `[`Either`](../-either/index.html)`<`[`L`](../-option/to-right.html#L)`, `[`T`](../-option/index.html#T)`>`<br>Returns a [Left](../-left/index.html) containing the given argument [left](../-option/to-right.html#it.czerwinski.kotlin.util.Option$toRight(kotlin.Function0((it.czerwinski.kotlin.util.Option.toRight.L)))/left) if this is empty, or a [Right](../-right/index.html) containing this option's value if it is defined. |
| [zip](../-option/zip.html) | `infix fun <R> zip(other: `[`Option`](../-option/index.html)`<`[`R`](../-option/zip.html#R)`>): `[`Option`](../-option/index.html)`<`[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`T`](../-option/index.html#T)`, `[`R`](../-option/zip.html#R)`>>`<br>Returns [Some](./index.html) containing a `Pair` of values of this and [other](../-option/index.html) if both [Option](../-option/index.html)s are [Some](./index.html). Otherwise returns [None](../-none/index.html).`fun <T1, R> zip(other: `[`Option`](../-option/index.html)`<`[`T1`](../-option/zip.html#T1)`>, transform: (`[`T`](../-option/index.html#T)`, `[`T1`](../-option/zip.html#T1)`) -> `[`R`](../-option/zip.html#R)`): `[`Option`](../-option/index.html)`<`[`R`](../-option/zip.html#R)`>`<br>Returns [Some](./index.html) containing the result of applying [transform](../-option/zip.html#it.czerwinski.kotlin.util.Option$zip(it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.Option.zip.T1)), kotlin.Function2((it.czerwinski.kotlin.util.Option.T, it.czerwinski.kotlin.util.Option.zip.T1, it.czerwinski.kotlin.util.Option.zip.R)))/transform) to both values of this and [other](../-option/index.html) if both [Option](../-option/index.html)s are [Some](./index.html). Otherwise returns [None](../-none/index.html). |

### Extension Functions

| [asOption](../as-option.html) | `fun <T> `[`T`](../as-option.html#T)`?.asOption(): `[`Option`](../-option/index.html)`<`[`T`](../as-option.html#T)`>`<br>Returns [Some](./index.html) if this is not `null` or [None](../-none/index.html) if this is `null`. |
| [contains](../contains.html) | `operator fun <T> `[`Option`](../-option/index.html)`<`[`T`](../contains.html#T)`>.contains(element: `[`T`](../contains.html#T)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Tests whether the [Option](../-option/index.html) contains the given [element](../contains.html#it.czerwinski.kotlin.util$contains(it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.contains.T)), it.czerwinski.kotlin.util.contains.T)/element). |
| [getOrElse](../get-or-else.html) | `fun <T> `[`Option`](../-option/index.html)`<`[`T`](../get-or-else.html#T)`>.getOrElse(default: () -> `[`T`](../get-or-else.html#T)`): `[`T`](../get-or-else.html#T)<br>Gets the value of a [Some](./index.html) or [default](../get-or-else.html#it.czerwinski.kotlin.util$getOrElse(it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.getOrElse.T)), kotlin.Function0((it.czerwinski.kotlin.util.getOrElse.T)))/default) value if this is [None](../-none/index.html). |
| [orElse](../or-else.html) | `fun <T> `[`Option`](../-option/index.html)`<`[`T`](../or-else.html#T)`>.orElse(default: () -> `[`Option`](../-option/index.html)`<`[`T`](../or-else.html#T)`>): `[`Option`](../-option/index.html)`<`[`T`](../or-else.html#T)`>`<br>Returns this [Option](../-option/index.html) if this is a [Some](./index.html) or [default](../or-else.html#it.czerwinski.kotlin.util$orElse(it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.orElse.T)), kotlin.Function0((it.czerwinski.kotlin.util.Option((it.czerwinski.kotlin.util.orElse.T)))))/default) if this is [None](../-none/index.html). |

